--- a/pom.xml
+++ b/pom.xml
@@ -76,9 +76,9 @@
             <version>${okhttp.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>2.0.13</version>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
